message_header: Fix date alignment in PMs.
My previous message_header fix
0b4568d249ec668379856bc101723b62728ca43a
accidentally changed the alignment of dates in private messages (so that
it was inconsistent to the alignment in other narrows).

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -1019,6 +1019,7 @@ td.pointer {
 .message-header-contents {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     border-right: 1px solid hsl(0, 0%, 88%);
     background-color: hsl(0, 0%, 88%);
 }
